Настройка для Cloudflare Pages

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# cloudflare
+.wrangler
+wrangler.toml.bak
+.dev.vars
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
