--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-virtual": "^3.13.18",
     "@upstash/redis": "^1.36.1",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
