--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rgsu",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "private": true,
   "scripts": {
     "dev": "node scripts/sync-version.js && next dev -H 0.0.0.0 --webpack",
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-virtual": "^3.13.18",
     "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
