--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.8",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.2.0",
     "@types/react": "^19.2.11",
